# plus1_cody_template

./: .gitignore
cross_proj/: CMakeLists.txt  container.cmake
cross_proj/template/: CMakeLists.txt  test.cpp
disk/usr/include/: dlg_config.h
disk/usr/include/ntios/base/: ntios_base.h  ntios_cbuff.h  ntios_evfifo.h  ntios_log.h  ntios_property.h
disk/usr/include/ntios/beep/: ntios_beep.h  ntios_beepchannel.h  ntios_beeptypes.h
disk/usr/include/ntios/fd/: ntios_fd.h
disk/usr/include/ntios/gpiodfunc/: ntios_gpiodfunc.h
disk/usr/include/ntios/io/: ntios_io.h  ntios_iotypes.h
disk/usr/include/ntios/libtest/: libtest.h
disk/usr/include/ntios/pat/: ntios_pat.h  ntios_patchannel.h  ntios_pattypes.h
disk/usr/include/ntios/pmux/: ntios_pmux.h
disk/usr/include/ntios/ser/: ntios_ser.h  (+4 more)
disk/usr/lib/arm-linux-gnueabihf/: libexpect.so.5.45.4  libgcrypt.so.20.2.5  libldap_r-2.4.so.2.10.12  libpython3.8.so.1.0
disk/usr/lib/firmware/: a926.img
disk/usr/lib/git-core/: git-credential-cache
disk/usr/lib/systemd/: systemd
disk/usr/libexec/: dconf-service  glib-pacrunner
disk/usr/sbin/: agetty  blkdiscard  blkid  blkzone  blockdev  cfdisk  chcpu  chgpasswd  chmem  chpasswd  cppw  ctrlaltdel  fdformat  fdisk  findfs  fsck  fsck.cramfs  fsck.minix  fsfreeze  fstrim  groupadd  groupdel  groupmems  groupmod  grpck  grpconv  grpunconv  hwclock  iconvconfig  isosize  ldattach  ldconfig.real  losetup  mkfs  mkfs.bfs  mkfs.cramfs  mkfs.minix  mkswap  newusers  nologin  (+28 more)
disk/usr/share/build-essential/: essential-packages-list
disk/usr/share/distro-info/: ubuntu.csv
(+274 files in other folders)
